--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ annotations_attributes/
 annotations_traffic/
 annotations_vehicle/
 JAAD_clips/
+split_clips_to_frames.sh
+behavior.png
+download_clips.sh
+split_ids/
